--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,126 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 8, ../sass/screen.scss */
-header {
-  background: #1f3f66;
+/* line 5, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+/* line 22, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+html {
+  line-height: 1;
+}
+
+/* line 24, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 26, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 28, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 30, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none;
+}
+/* line 103, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+/* line 32, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 116, ../../../../../Ruby23-x64/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
+/* line 10, ../sass/screen.scss */
+buttonHover, #site-banner #banner-overlay #banner-content #content-button:hover {
+  cursor: pointer;
+  background-color: #22a00b;
+}
+
+/* line 16, ../sass/screen.scss */
+body {
+  font-family: Calibri;
+}
+
+/* line 20, ../sass/screen.scss */
+#site-banner {
+  background: url("../images/skyline-buildings-new-york-skyscrapers.jpg");
+  position: relative;
+  background-repeat: no-repeat;
+  color: #1f3f66;
+  line-height: 43px;
+  width: 100vw;
+  background-size: cover;
+  overflow: hidden;
+}
+/* line 32, ../sass/screen.scss */
+#site-banner #banner-overlay {
+  padding-left: 17%;
+  padding-top: 5%;
+  height: 100%;
+  background-color: rgba(213, 232, 255, 0.15);
+}
+/* line 40, ../sass/screen.scss */
+#site-banner #banner-overlay #banner-content {
+  background: url("../images/device_black.png");
+  background-size: contain;
+  background-position: 552px 5px;
+  background-repeat: no-repeat;
+  margin-bottom: 102px;
+}
+/* line 48, ../sass/screen.scss */
+#site-banner #banner-overlay #banner-content #banner-text {
+  font-size: 51px;
+}
+/* line 52, ../sass/screen.scss */
+#site-banner #banner-overlay #banner-content #banner-subtext {
+  font-size: 46px;
+  font-family: "Calibri Light";
+}
+/* line 58, ../sass/screen.scss */
+#site-banner #banner-overlay #banner-content #content-button {
+  margin-top: 20px;
+  background-color: #57bc42;
+  border-radius: 6px;
+  height: 60px;
+  width: 260px;
+  border: 0px;
+  color: #fff;
+  font-size: 30px;
+  font-weight: bold;
 }
