--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -22,7 +22,6 @@ body{
   position: relative;
   background-repeat: no-repeat;
   color: $themeColor;
-  line-height: 43px;
   width: 100vw;
   background-size: cover;
   overflow: hidden;
@@ -30,8 +29,8 @@ body{
 
     // color-overlay
     #banner-overlay{
-      padding-left: 17%;
-      padding-top: 5%;
+      padding-left: 16.9%;
+      padding-top: 4%;
       height: 100%;
       background-color: rgba(213 , 232, 255 , .15);
 
@@ -40,36 +39,39 @@ body{
       #banner-content{
         background: url("../images/device_black.png");
         background-size: contain;
-        background-position: 552px 5px;
+        background-position: 558px 5px;
         background-repeat: no-repeat;
         margin-bottom: 102px;
 
         // banner text
           #banner-text{
             font-size:51px;
+            line-height: 64px;
+            margin-bottom: 2px;
           }
 
           #banner-subtext{
             font-size:46px;
+            line-height: 48px;
             font-family: "Calibri Light";
           }
 
         // banner  button
-        #content-button{
-          margin-top: 20px;
-          background-color: #57bc42;
-          border-radius: 6px;
-          height: 60px;
-          width: 260px;
-          border: 0px;
-          color: #fff;
-          font-size: 30px;
-          font-weight: bold;
-        }
+          #content-button{
+            margin-top: 35px;
+            background-color: #57bc42;
+            border-radius: 6px;
+            height: 60px;
+            width: 260px;
+            border: 0px;
+            color: #fff;
+            font-size: 30px;
+            font-weight: bold;
+          }
 
-         #content-button:hover{
-           @extend buttonHover;
-         }
+           #content-button:hover{
+             @extend buttonHover;
+           }
       }
   }
 
