--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -84,38 +84,40 @@ body {
   position: relative;
   background-repeat: no-repeat;
   color: #1f3f66;
-  line-height: 43px;
   width: 100vw;
   background-size: cover;
   overflow: hidden;
 }
-/* line 32, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 #site-banner #banner-overlay {
-  padding-left: 17%;
-  padding-top: 5%;
+  padding-left: 16.9%;
+  padding-top: 4%;
   height: 100%;
   background-color: rgba(213, 232, 255, 0.15);
 }
-/* line 40, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 #site-banner #banner-overlay #banner-content {
   background: url("../images/device_black.png");
   background-size: contain;
-  background-position: 552px 5px;
+  background-position: 558px 5px;
   background-repeat: no-repeat;
   margin-bottom: 102px;
 }
-/* line 48, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 #site-banner #banner-overlay #banner-content #banner-text {
   font-size: 51px;
+  line-height: 64px;
+  margin-bottom: 2px;
 }
-/* line 52, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 #site-banner #banner-overlay #banner-content #banner-subtext {
   font-size: 46px;
+  line-height: 48px;
   font-family: "Calibri Light";
 }
-/* line 58, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 #site-banner #banner-overlay #banner-content #content-button {
-  margin-top: 20px;
+  margin-top: 35px;
   background-color: #57bc42;
   border-radius: 6px;
   height: 60px;
