--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -114,9 +114,10 @@ body{
       width: 70%;
       margin-left: 5px;
       color: #1f3f66;
-      font-family: $font-family;
-      font-size: 24px;
+      font-family: Arial;
+      font-size: 21px;
       line-height: 24px;
+      letter-spacing: 1.5px;
     }
     img
     {
