--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -194,8 +194,9 @@ body{
       width: 70%;
       margin-left: 5px;
       color: #1f3f66;
-      font-family: $font-family;
-      font-size: 24px;
+      font-family: Arial;
+      letter-spacing: 1px;
+      font-size: 22px;
       line-height: 24px;
     }
     img
@@ -230,8 +231,11 @@ body{
 
     #feature-phone-subtext{
       margin-top: 10px;
-      font-size: 28.5px;
-      color: $themeColor;
+      font-size: 24.5px;
+      color: #1f4e75;
+      font-family: Arial;
+      letter-spacing: .8px;
+      line-height: 29px;
     }
 
     #feature-button {
