--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -166,16 +166,17 @@ body{
   width:76px;
   height:76px;
   float: right;
+
 }
 
 //mainbanner
 .icon
 {
-      background: rgba(1, 1, 1, 0.12);
-      list-style: none;
-      padding:30px 0px 30px 58px;
-      padding-left: 75px;
- //
+  background: rgba(1, 1, 1, 0.12);
+  list-style: none;
+  padding:30px 0px 30px 58px;
+  padding-left: 75px;
+  //
   li
   {
     display: inline-block;
@@ -202,6 +203,11 @@ body{
     img
     {
       @include icon;
+      opacity: .70;
+    }
+    img:hover
+    {
+      opacity: 1.0;
     }
   }
 }
@@ -258,7 +264,7 @@ body{
     }
   }
 
-  #mustClear{
+  #clearBoth{
     clear: both;
   }
 }
